added the revert app feature

--- a/settings.html
+++ b/settings.html
@@ -60,7 +60,7 @@
 			
 			<tr>
 				<td>
-					<button onclick="change_app('home')">Revert to App Picker</button>
+					<button onclick="revertApp()">Revert to App Picker</button>
 				</td>
 			</tr>
 			<!--
